Fixed collapse bug on topics tab

--- a/client/src/components/Dashboard/Dashboard.scss
+++ b/client/src/components/Dashboard/Dashboard.scss
@@ -83,7 +83,7 @@
 
   .avatar {
     max-width: 100px;
-    max-height: 50px;
+    max-height: 100px;
     min-width: 50px;
     min-height: 50px;
     border: white solid 0.2rem;
